[package]
name = "password_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cli-clipboard ="0.2.1"
clap = { version = "4.0.8", features = ["derive"] }
orion = "0.17.2"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
anyhow = "1.0.65"

